mobile cart fix, header z-index, reset cart on placing order

--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -5,7 +5,7 @@
   height: 6rem;
   background-color: transparent;
   @include absolute;
-  z-index: 200;
+  z-index: 90;
   transition: background-color 200ms linear;
 
   @include mq($tablet) {
