--- a/src/styles/_reset.module.scss
+++ b/src/styles/_reset.module.scss
@@ -10,6 +10,7 @@
 
 html {
   font-size: 62.5%;
+  height: -webkit-fill-available;
 }
 
 body {
@@ -18,6 +19,9 @@ body {
   line-height: 1.6;
   color: $text-color;
   background-color: $bg-color;
+  min-height: 100vh;
+  /* mobile viewport bug fix */
+  min-height: -webkit-fill-available;
 }
 
 h1,
